--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.8",
     "@stylistic/eslint-plugin-js": "^1.6.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
