--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  linting:
+  linting_and_build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4 
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
 
   tag_release:
-    needs: [simple_deployment_pipeline]
+    needs: [linting_and_build]
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
     steps:
