--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,6 @@ primary_region = 'cdg'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[processes]
+  working_dir = "/workspace/phonebook_backend"
