added backend directory to frontend configured fly.io deployment

--- a/fly.toml
+++ b/fly.toml
@@ -8,8 +8,14 @@ primary_region = 'cdg'
 
 [build]
 
+[env]
+  PORT=3000
+
+[processes]
+  app = "node app.js"
+
 [http_service]
-  internal_port = 80
+  internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -20,6 +26,3 @@ primary_region = 'cdg'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
-[processes]
-  working_dir = "/workspace/phonebook_backend"
