added test result archiving to workflows

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,6 +27,16 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: test
+        run: npm run test
+
+      - name: Archive test results
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: test-results
+          path: ./playwright-report
+
   tag_release:
     needs: [linting_and_build]
     runs-on: ubuntu-20.04
